--- a/style.css
+++ b/style.css
@@ -2,11 +2,16 @@ html{
   font-size: 100%;
 }
 
-h1{
-  font-family: Helvetica, Arial, sans-serif;
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'Merriweather Sans', Helvetica, Arial, sans-serif;
   color: black;
 
 }
+h1{
+  font-size: 3rem;
+  margin-bottom: 1rem;
+}
+
 
 p{
   Color: black;
@@ -53,8 +58,9 @@ padding:0;
     text-align: center;
     text-decoration: none;
     padding: 4px;
-    font-family: Helvetica, Arial, sans-serif;
-  }
+    font-family: 'Merriweather Sans', Helvetica, Arial, sans-serif;
+    font-size: .8rem
+   }
 
   #nav a:hover, a:active {
     background-color: #4E91AB;
