--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ html{
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: 'Merriweather Sans', Helvetica, Arial, sans-serif;
+  font-family:'Montserrat', Helvetica, Arial, sans-serif;
   color: black;
 
 }
@@ -58,7 +58,7 @@ padding:0;
     text-align: center;
     text-decoration: none;
     padding: 4px;
-    font-family: 'Merriweather Sans', Helvetica, Arial, sans-serif;
+    font-family: 'Montserrat', Helvetica, Arial, sans-serif;
     font-size: .8rem
    }
 
