--- a/style.css
+++ b/style.css
@@ -2,11 +2,11 @@ html{
   font-size: 100%;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1, h2, h3, h4, h5, h6{
   font-family:'Montserrat', Helvetica, Arial, sans-serif;
   color: black;
-
 }
+
 h1{
   font-size: 3rem;
   margin-bottom: 1rem;
@@ -15,22 +15,21 @@ h1{
 
 p{
   Color: black;
-  font-family: 'Merriweather', Georgia, "Times New Roman",serif;
+  font-family: 'Merriweather', Georgia, "Times New Roman", serif;
   font-size: 1rem;
   line-height: 1.35rem;
-
 }
 
 em{
   font-style:italic;
 }
 
-body {
-  background-color: #6AE8C3;
+body{
+  background-color: #6A737F;
   text-align: center;
 }
 
-#container {
+#container{
   width: 95%;
   margin: auto;
 }
@@ -38,7 +37,7 @@ body {
 ul{
   list-style-type: none;
 }
-#nav {
+#nav{
 padding:0;
 }
 
@@ -53,12 +52,12 @@ padding:0;
   #nav a:link, a:visited {
     display:block;
     color: black;
-    background-color: #6AC5E8;
+    background-color: #5D7FB0;
     font-weight: bold;
     text-align: center;
     text-decoration: none;
     padding: 4px;
-    font-family: 'Montserrat', Helvetica, Arial, sans-serif;
+    font-family: 'Francois One', Helvetica, Arial, sans-serif;
     font-size: .8rem
    }
 
@@ -66,7 +65,7 @@ padding:0;
     background-color: #4E91AB;
   }
 
-  img {
+  img{
   border-style: none;
   display: block;
   width: 50%;
