--- a/style.css
+++ b/style.css
@@ -74,14 +74,14 @@ img{
   text-align: center;
 }
 
-.aside {
+.aside-1 {
   display: flex;
   background: #95646D;
   color: black;
   font-family: 'Merriweather', Georgia, "Times New Roman", serif;
   font-size: 1rem;
   line-height: 1.35rem;
-  padding: 10px; 
+  padding: 10px;
   /*width: 100%;*/
 }
 
