--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@ img{
   text-align: center;
 }
 
-.aside-1 {
+/*.aside-1 {
   display: flex;
   background: #95646D;
   color: black;
@@ -83,7 +83,7 @@ img{
   line-height: 1.35rem;
   padding: 10px;
   /*width: 100%;*/
-}
+}*/
 
 .header {
   flex: 1 100%;
@@ -94,28 +94,99 @@ img{
 font-style: italic;
 }
 
-@media (min-width: 800px) {
+#navigation .nav{
+  order:2;
+  margin: 10px;
+  align-self: flex-start;
+}
+
+#content {
+  background: #94817A;
+  padding:10px;
+}
+
+#sidebar {
+  background: #95646D;
+  color:black;
+  padding:10px;
+}
+
+#navigation ul{
+  display:flex;
+  flex-flow:column;
+  justify-content: space-around;
+  /*color: #333;*/
+  list-style-type: none;
+  padding:10px;
+}
+
+@media screen and (min-width: 600px){
+
+  #pageBody {
+    display: flex;
+    flex-flow: row;
+  }
+
+  /*.nav{
+    flex-flow: row;
+    justify-content: center;
+    padding: 10px;*/
+
+  }
+  /*.nav a:hover{
+    background: white;
+  }
+
+  .nav a{
+    border: none;
+  }*/
+
+  p{
+		width: 80%;
+		margin: 1.5em auto;
+	}
+
+  #content {
+      flex: 3 auto;
+      margin-right: 20px;
+    }
+
+    #sidebar{
+      flex: 1 auto;
+    }
+    #navigation ul{
+      display:flex;
+      flex-flow:column;
+      justify-content: space-around;
+      /*color: #333;*/
+      list-style-type: none;
+      padding:10px;
+    }
+
+  #navigation li{
+    border-right: none;
+}
+@media screen and (min-width: 1000px) {
 
 .wrapper{
   flex-flow: row wrap;
   flex: 1 auto;
 }
 
-img{
-border-style: none;
-display: block;
-margin: auto;
-width: 50%;
-order: 2;
+p{
+  width: 80%;
+  max-width: 60em;
 }
 
-ul {
-  list-style-type: none;
-}
-.nav{
-  flex-flow: row;
+
+
+/*ul {
+  list-style-type: none;*/
+/*}*/
+/*.nav{
+  flex-flow: column;
   justify-content: center;
-  padding: 10px;
+  padding: 10px;*/
 
 }
 .nav a:hover{
@@ -126,7 +197,22 @@ ul {
   border: none;
 }
 
-article {
+.nav ul {
+      display: flex;
+      flex-flow: column;
+      margin: 0;
+  }
+
+  .nav li{
+    border-right:none;
+    border-bottom: 1px solid rgba(255,255,255,0.5);
+  }
+
+  .nav li:last-child {
+    border-bottom: none;
+  }
+
+/*article {
   width: 40%;
 }
 
@@ -134,6 +220,31 @@ aside {
   width: 40%;
   /*flex-direction: row;
   order: 3;*/
+}*/
+#navigation{
+  order:2;
+  margin: 10px;
+  align-self: flex-start;
+}
+
+#navigation ul{
+  display:flex;
+  flex-flow:row;
+  justify-content: space-around;
+  /*color: #333;*/
+  list-style-type: none;
+  padding:10px;
+}
+
+
+#content{
+  order:1;
+  margin: 10px;
+}
+
+#sidebar{
+  order: 3;
+  margin: 10px
 }
 
 }
