--- a/style.css
+++ b/style.css
@@ -29,6 +29,10 @@ body{
   text-align: center;
 }
 
+aside {
+  background:  #95646D;
+}
+
 .wrapper{
   display: flex;
   flex-flow: row wrap;
@@ -53,7 +57,7 @@ body{
   display: block;
   background: #7F303E;
   padding: 10px;
-  border-top: black 1px solid;
+  /*border-top: black 1px solid;*/
   color: black;
 }
 
@@ -74,7 +78,7 @@ img{
   text-align: center;
 }
 
-/*.aside-1 {
+.aside-1 {
   display: flex;
   background: #95646D;
   color: black;
@@ -82,8 +86,8 @@ img{
   font-size: 1rem;
   line-height: 1.35rem;
   padding: 10px;
-  /*width: 100%;*/
-}*/
+  width: 100%;
+}
 
 .header {
   flex: 1 100%;
@@ -127,12 +131,17 @@ font-style: italic;
     flex-flow: row;
   }
 
+  img {
+    width: 80%;
+    display: none;
+    /*margin: 0 auto;*/
+  }
+
   /*.nav{
     flex-flow: row;
     justify-content: center;
-    padding: 10px;*/
+  padding: 10px;}*/
 
-  }
   /*.nav a:hover{
     background: white;
   }
@@ -154,6 +163,7 @@ font-style: italic;
     #sidebar{
       flex: 1 auto;
     }
+
     #navigation ul{
       display:flex;
       flex-flow:column;
@@ -165,18 +175,28 @@ font-style: italic;
 
   #navigation li{
     border-right: none;
+  }
+  #pagebody {
+    max-width: 60em;
+  }
 }
+
 @media screen and (min-width: 1000px) {
 
-.wrapper{
-  flex-flow: row wrap;
-  flex: 1 auto;
+.wrapper {
+  flex-direction: row;
+  flex-wrap: wrap;
+  /*flex: 1 auto;*/
 }
 
-p{
+.wrapper article {
+  width: 30%;
+}
+
+/*p {
   width: 80%;
   max-width: 60em;
-}
+}*/
 
 
 
@@ -186,9 +206,8 @@ p{
 /*.nav{
   flex-flow: column;
   justify-content: center;
-  padding: 10px;*/
+  padding: 10px;}*/
 
-}
 .nav a:hover{
   background: white;
 }
@@ -208,19 +227,20 @@ p{
     border-bottom: 1px solid rgba(255,255,255,0.5);
   }
 
-  .nav li:last-child {
+  /*.nav li:last-child {
     border-bottom: none;
-  }
+  }*/
 
-/*article {
+article {
   width: 40%;
 }
 
 aside {
   width: 40%;
-  /*flex-direction: row;
-  order: 3;*/
-}*/
+  flex-direction: row;
+  order: 3;
+}
+
 #navigation{
   order:2;
   margin: 10px;
@@ -246,5 +266,9 @@ aside {
   order: 3;
   margin: 10px
 }
-
+img {
+  width: 80%;
+  display: block;
+  /*margin: 0 auto;*/
+}
 }
