--- a/newstyle.css
+++ b/newstyle.css
@@ -118,6 +118,10 @@ img {
   display: block;
 }
 
+.menu-trigger{
+  display:none; 
+}
+
 @media screen and (min-width:1000px){
 
   .wrapper{
@@ -154,6 +158,7 @@ img {
     margin:10px;
     align-self: flex-start;
   }
+
 
 
 
