--- a/newstyle.css
+++ b/newstyle.css
@@ -78,6 +78,21 @@ nav ul {
   padding: 0;
 }
 
+.map-wrapper {
+	overflow: hidden;
+	padding-bottom: 56.25%; /*16 by 9 ratio */
+	position: relative;
+	height: 0;
+}
+
+.map-wrapper iframe{
+	left: 0;
+	top: 0;
+	height: 100%;
+	width: 100%;
+	position: absolute;
+}
+
 
 @media screen and (min-width:600px) {
 
